--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ Thumbs.db
 .vs/Twistowop/v15/Server/sqlite3/storage.ide-shm
 .vs/Twistowop/v15/Server/sqlite3/storage.ide
 .vs/Twistowop/v15/Server/sqlite3/db.lock
+Assets/Imported Art.meta
